test/fails/test3.jl
using Jive
@If VERSION >= v"1.11" module test_context
# @If VERSION >= v"1.14.0-DEV.1453" module test_context

using Test

c = :context
@test false context=c

end # module test_context
